# weatherfax_pi

./: CMakeLists.txt  Changelog.md  Plugin.cmake  VERSION.cmake  appveyor.yml  config.h.in
.circleci/: config.yml
build-deps/: control  macos-deps
cmake/: CmakeSetup.cmake  ConfigureManifest.cmake  PluginLibs.cmake  TemplateVersion
flatpak/: org.opencpn.OpenCPN.Plugin.wheaterfax.yaml
libs/audiofile/: CMakeLists.txt
libs/audiofile/src/: File.h  config.h
libs/audiofile/src/modules/: FileModule.h  UT_RebufferModule.cpp
libs/curl/: CMakeLists.txt
libs/googletest/: CMakeLists.txt
libs/libusb/: CMakeLists.txt
libs/rtl-sdr/: CMakeLists.txt
libs/rtl-sdr/rtl-sdr/: CMakeLists.txt
libs/rtl-sdr/rtl-sdr/src/: CMakeLists.txt
libs/wxcurl/: CMakeLists.txt
ocpn-misc/: cutil.cpp
src/: .gitignore  AboutDialog.cpp  InternetRetrievalDialog.cpp  SchedulesDialog.cpp  WeatherFax.cpp  WeatherFax.h  WeatherFaxImage.cpp  WeatherFaxUI.h  weatherfax_pi.cpp  weatherfax_pi.h
